bobcat (1.19.1) (ISN)

  * Added missing namespace declarations to glob/driver/driver.cc

  * Prevented exception from being thrown from the Arg constructor, repaired
    report of the argument before an undefined option instead of the undefined
    option (as in, e.g., 
        tmp/bin/xd --verbose -tm
        ArgData::ArgData(): unknown option: --verbose
    or:
        tmp/bin/xd -tm
        ArgData::ArgData(): unknown option: tmp/bin/xd

  * Removed 'throw()' phrases from various functions and man-pages (except
    from various Errno members, as there throw() specifications are required
    by its std::exception base class

  * Removed inline in inline virtual ~Errno() (old g++ bug, now repaired)

bobcat (1.19.0)

  * Added the template function binary_search that returning iterator to the
    location of a found element rather than a bool value (as returned by the
    std::binary_search algorithm) telling its caller whether the searched for
    element is present or not

  * The Process class was given additional functionality allowing better
    control over the way child processes are started and the Process man-page
    was updated accordingly

  * The description of the member `header()' in the man-page of the class 
    Milter was improved

  * CGI's man-page now contains a common organization of a program using
    a CGI object

bobcat (1.18.1)

  * Repaired a flaw in Pattern due to which a segfault could occur becasue of
    a failure to initialize the Finite State Automaton processing Perl-like
    character-set abbreviations. Also the HANDLING OF BACKSLASHES by Pattern
    objects was modified: to specify a literal backslash is must now be
    specified twice. 
    NOTE that this change *may* require some maintenance of patterns that were
    hard-coded in programs already using the Pattern class. See the `pattern'
    man-page for details.

  * Removed all left-over redundant include guards
  