@@ -1,9 +1,7 @@
-Add missing functions to Stat
+Add missing functions to Stat, mentioned in its man-page
 
 Add info to the stat manpage indicating what fields of the stat struct are
 returned by the specific members (in particular: device related)
-
-The Glob() constructor can throw an exception: must be repaired
 
 --
 
