@@ -16,6 +16,7 @@ class Glob
     };
 
     GlobShare *d_share;
+    bool d_ok;
     
     public:
         enum Flags
@@ -46,6 +47,9 @@ class Glob
         char const *const *begin() const;
         char const *const *end() const;
 
+        operator bool() const;      // true if glob's constructor worked fine
+        void ok() const;            // throws exception if not OK 
+                                    // (previously by the constructor)
     private:
         char const **mbegin() const;
         char const **mend() const;
@@ -96,6 +100,18 @@ inline char const **Glob::mend() const
     return const_cast<char const **>
             (d_share->globStruct.gl_pathv + size());
 }
+
+inline Glob::operator bool() const
+{
+    return d_ok;
+}
+
+inline void Glob::ok() const
+{
+    if (!d_ok)
+        throw Errno("Glob: glob() failed or illegal Flag specified");
+}
+
 
 } // FBB
         
