@@ -6,13 +6,15 @@ Glob::Glob(string const &pattern, int flags, Dots dots)
 {
     d_share->users = 1;
 
-    if 
-    (
-        glob(pattern.c_str(), flags, 0, &d_share->globStruct)
-        ||
-        flags & ~(ERR | MARK | NOSORT | NOESCAPE | PERIOD)
-    )
-        throw Errno("Glob: glob() failed or illegal Flag specified");
+    d_ok = 
+        (
+            glob(pattern.c_str(), flags, 0, &d_share->globStruct)
+            ||
+            flags & ~(ERR | MARK | NOSORT | NOESCAPE | PERIOD)
+        );
+
+    if (!d_ok)
+        return;
 
     if (dots == FIRST)
         stable_partition(mbegin(), mend(), 
