@@ -1,5 +1,11 @@
-bobcat (1.19.1) (ISN)
+bobcat (1.20.0) (ISN)
 
+  * Removed exception thrown from Glob's constructor. 
+    Alternatives: Glob::operator bool() and Glob::ok(). 
+
+    NOTE  this CHANGES the Glob API: Programs using Glob should be recompiled
+    NOTE  and check for the proper return of the Glob constructor
+    
   * Added missing namespace declarations to glob/driver/driver.cc
 
   * Prevented exception from being thrown from the Arg constructor, repaired
@@ -16,6 +22,7 @@ bobcat (1.19.1) (ISN)
     by its std::exception base class
 
   * Removed inline in inline virtual ~Errno() (old g++ bug, now repaired)
+
 
 bobcat (1.19.0)
 
